--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.github.arleyduarte:android-entity:-SNAPSHOT'
+    compile 'com.github.satyan:sugar:1.5'
+    compile 'com.github.arleyduarte:android-network:0.9.+'
 }
