--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.amdp.android.guihelpers">
 
     <application>
-        <activity android:name="com.amdp.android.survey.activities.QuestionsByOneForm" android:theme="@style/Theme.AppCompat"/>
+      <!--  <activity android:name="com.amdp.android.survey.activities.QuestionsByOneForm" android:theme="@style/Theme.AppCompat"/>
         <activity android:name="com.amdp.android.survey.activities.SurveysListActivity" android:theme="@style/Theme.AppCompat"/>
-
+-->
         <activity android:name=".LoginActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".EmptyActivity"
