--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.amdp.android.guihelpers">
 
+    <!--
     <application>
-      <!--  <activity android:name="com.amdp.android.survey.activities.QuestionsByOneForm" android:theme="@style/Theme.AppCompat"/>
+       <activity android:name="com.amdp.android.survey.activities.QuestionsByOneForm" android:theme="@style/Theme.AppCompat"/>
         <activity android:name="com.amdp.android.survey.activities.SurveysListActivity" android:theme="@style/Theme.AppCompat"/>
--->
+
         <activity android:name=".LoginActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".EmptyActivity"
@@ -17,7 +18,7 @@
             </intent-filter>
         </activity>
     </application>
-
+-->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
