--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.github.arleyduarte:android-entity:1.1.1'
     compile 'com.github.satyan:sugar:1.5'
-    compile 'com.github.arleyduarte:android-network:0.9.+'
+    compile 'com.github.arleyduarte:android-network:-SNAPSHOT'
     compile 'com.google.code.gson:gson:2.2.4'
 }
